# rst2rfcxml

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  sample.html  sample.xml
.github/: dependabot.yml
.github/workflows/: build.yml  scorecard.yml  validate-yaml.yml
docs/: Releasing.md
lib/: CMakeLists.txt  rst2rfcxml.cpp  rst2rfcxml.h
rst2rfcxml/: CMakeLists.txt  Releasing.md  main.cpp  rst2rfcxml.cpp  rst2rfcxml.h
sample/: sample-prologue.rst  sample-skeleton.rst  sample.html  sample.rst  sample.txt  sample.xml
test/: CMakeLists.txt  basic_tests.cpp  test.cpp
